--- a/_data/2022/covenant-university/teaching_assistants.yml
+++ b/_data/2022/covenant-university/teaching_assistants.yml
@@ -1,1 +1,4 @@
-- name:
+- name: Oluwatosin Deborah Edafe 
+  bio: Oluwatosin Deborah Edafe is a Doctoral Candidate in the Department of Economics and Development Studies at Covenant University, Nigeria. She is also a Research Fellow at the Centre for Economic Policy and Development Research (CEPDeR), Covenant University. Her primary research interest involves Development Economics, Land and Agricultural Economics. She uses mixed methods analysis (quantitative and qualitative techniques) to study the gendered impact of land investments on household livelihood and food security. She has over a decade of work experience with the Ondo State Ministry of Education, supervising education activities.
+  image: /assets/images/edafe_cu.png
+  website: 
