--- a/_data/2022/fgv-dapp-brazil/schedule.yml
+++ b/_data/2022/fgv-dapp-brazil/schedule.yml
@@ -12,7 +12,7 @@
     - name: "2:00 - 3:00 Small group discussion of [case study](https://bdes.datasociety.net/wp-content/uploads/2016/10/Patreon-Case-Study.pdf)"
     - name: "3:00 - 3:30 Whole group debrief about case study (*Zoom*)"
     - name: "3:30 - 4:00 Break"
-    - name: "4:00 - 5:00 Workshop: Algorithm Accountability, **Daniel Trielli** (Northwestern University and SICSS-Chicago)."
+    
 
 - date: 2021-06-21
   name: Collecting Digital Trace Data
@@ -26,7 +26,7 @@
     - name: "2:30 - 3:30 Discussing Strengths & Benefits plus Hybrid Designs (Everybody)"
     - name: "3:30 - 3:45 Debrief and logistics"
     - name: "3:45 - 4:00 Break"
-    - name: "4:00 - 4:45 GUEST-SPEAKER: **Patrícia Rossini**:Rethinking Online Toxicity: Conceptual and Methodological Advantages of Disentangling Uncivil and Intolerant Discourse"
+    - name: "4:00 - 4:45 GUEST-SPEAKER: **Pablo Boczowski**"
 
 - date: 2021-06-22
   name: Automated Text Analysis
@@ -38,6 +38,9 @@
     - name: "1:00 - 1:15 Break"
     - name: "1:15 - 3:00 Text Analysis Group Exercise (Small Group) [Lesson Instructions](https://docs.google.com/document/d/1q6y2G0SPuum6gG-If911c5LdGKRBra8YqJ5Ce6JyYW4/edit)"
     - name: "3:30 - 4:00 Debrief and logistics (*Zoom*)"
+    - name: "4:00 - 4:45 GUEST-SPEAKER: **Leonardo Nascimento**:" 
+    
+
 
 - date: 2021-06-23
   name: Surveys in the Digital Age
@@ -51,7 +54,7 @@
     - name: "1:45 - 3:00 Afternoon group exercise (*Zoom*)"
     - name: "3:00 - 3:30 Whole group debrief about group exercise (*Zoom*)"
     - name: "3:30 - 3:45 Debrief and logistics (*Zoom*)"
-    - name: "4:00 - 4:45 GUEST-SPEAKER: **Cezar Zucco**:  Conducting Digital and Survey Experiments in Brazil" 
+    - name: "4:00 - 4:45 GUEST-SPEAKER: **Alexandra Siegel**:" 
 
 - date: 2021-06-24
   name: Mass collaboration and machine learning
@@ -67,7 +70,6 @@
     - name: "3:15 - 3:30 Whole group debrief about group exercise (*Zoom*)"
     - name: "3:30 - 3:45 Debrief and logistics (*Zoom*)"
     - name: "3:45 - 4:00 [Delete](https://github.com/compsocialscience/summer-institute/blob/master/2021/materials/day5-mass-collaboration/activity/lesson_plan_masscollaboration_participant.md#deleting-the-files-after-use) the Fragile Families data from your computer"
-    - name: "4:00 - 4:45 GUEST-SPEAKER: **Thiago Marzagão**: **Putting a price on real estate**:Data Science and Machine Learning in the Brazilian Government" 
 
 
 - date: 2021-06-25
@@ -77,18 +79,7 @@
   name: Day off
 
 - date: 2021-06-27
-  name: "DAPP Day and Base dos Dados"
-  events:
-    - name: "10:00 - 12:00 - Apresentação de Metodologia Linguística, Dalby/Danilo"
-    - name: "12:00 - 1:30 Break"
-    - name: "1:30 - 3:00 - Implementação de Metodologia Linguística, Lucas Roberto e Polyana"
-    - name: "3:00 - 3:30 - FGV DAPP Call for Proposals"
-    - name: "3:30 - 4:00 Break"
-    - name: "4:00 - 4:45 - WORKSHOP: **Fernanda Scovino** - A Base dos Dados"
-  
-- date: 2021-06-28
- 
-  name: Research Speed Dating
+    name: Research Speed Dating
   events:
     - name: "10:00 - 10:30 Research Speed Dating Logistics (*Zoom*), [Slides for Instructors](https://tiagoventura.github.io/sicss_presentation/slides-research-speed-dating#1)"
     - name: "10:30 - 11:30 Research Speed Dating Maximally Similar Groups (*Zoom*)"
@@ -100,13 +91,23 @@
     - name: "2:45 - 3:00 Break"
     - name: "3:00 - 3:30 Group Debrief (join research teams) (*Zoom*)"
 
-- date: 2021-06-29
-  name: Roundtable and Work on group projects (optional)
-  events: 
-    - name: "Roundtable: 10:00 - 12:00: Computational Social Science in the Academia - With Ernesto Calvo (ilCSS-UMD), and Rochelle Terman (UChicago)"
-    
-- date: 2021-06-30
-  name: Present group projects 
+- date: 2021-06-28
+  name: Workshop in NLP + Work on Group Projects
   events:
+    - name: "10:00 - 11:00:  Workshop on Modern NLP Techniques with Lucas Roberto."
+    - name: "Rest of the day: Work on your group projects"
+    - name: "3:00 - 3:30- Five minutes for each group to update on the projects"
+
+- date: 2021-06-29
+  name: Workshop in Social Network Models + Work on Group Projects
+  events:
+    - name: "10:00 - 11:00:  Workshop on Social Network Models in Python with Polyana Barbosa"
+    - name: "Rest of the day: Work on your group projects"
+    - name: "3:00 - 3:30- Five minutes for each group to update on the projects"
+  
+- date: 2021-06-30
+  name: Workshop + Present group projects 
+  events:
+    - name: "10:00 - 11:00:  Workshop on Online Surveys and Poststratification with Fernando Meireles"
     - name: "14:00 - 16:00 Present group projects (*Zoom*)"
     - name: "16:00 - 17:00 Conclusion e Virtual Happy Hour"
