--- a/_data/2022/haifa/faculty.yml
+++ b/_data/2022/haifa/faculty.yml
@@ -1,3 +1,8 @@
+- name: Daphna Canetti
+  bio: I am a professor of political psychology and the Dean of the Herta and Paul Amir Faculty of Social Sciences at the University of Haifa. My research focuses on the micro-foundations of political conflicts in the Middle East and elsewhere. I am particularly interested in the impact of individual-level exposure to cyber-terrorism and political violence on war/peace attitudes. I study psycho-political responses to multiple acts of political violence and terrorism. Methodologically, I use controlled randomized field experiments, spatial analysis, survey experiments, bio-political and physiological-political research.
+  image: /assets/images/Daphna-Canetti.jpg
+  website: https://daphnacanetti.com
+  
 - name: Baruch Eitam
   bio: 
   image: /assets/images/Baruch_Eitam.jpg
