--- a/_data/2022/duke/speakers.yml
+++ b/_data/2022/duke/speakers.yml
@@ -2,3 +2,9 @@
   image: /assets/images/parack2022.jpeg
   bio: "Suhem Parack is a Staff Developer Advocate at Twitter. He helps students and academic researchers with their research using the Twitter API. Before joining Twitter, he was a Solutions Architect at Amazon."
   website: https://twitter.com/suhemparack?ref_src=twsrc%5egoogle%7Ctwcamp%5eserp%7Ctwgr%5eauthor
+
+- name: "Justin Grimmer"
+  image: /assets/images/justin_grimmer.png
+  bio: "Justin Grimmer is a Professor of Political Science and a Senior Fellow at the Hoover Institution at Stanford University.  He co-directs with the Democracy and Polarization Lab.  His work examines how representation occurs in American democracy developing and using new statistical and machine learning tools.  Along with Molly Roberts and Brandon Stewart he is the author of the recently released book 'Text as Data: A New Framework for Machine Learning in the Social Sciences' "
+  website: https://politicalscience.stanford.edu/people/justin-ryan-grimmer
+
