DRY up video listing config
Configure video search fields and reference in Jekyll configuration, and
use that in JS (rather than hardcoding in JS file) so that new fields
can be added in a single spot.

--- a/_config.yml
+++ b/_config.yml
@@ -37,8 +37,11 @@ collections:
   videos:
     output: true
     permalink: /overview/:name
-    search_keys:
-      - slug
+
+video_listing:
+  search:
+    ref: slug
+    keys:
       - title
       - content
       - author
