Add (nonfunctional, currently) sidebar filters
Add some filter configuration to the main site config file that
determines which filters to pluck from the video files, and how to
display them.

Add a loop/template that generates a list of filters based on actual
data used in the video files, and displays them as possible filters.

This does not yet include actual filtering functionality.

--- a/_config.yml
+++ b/_config.yml
@@ -45,6 +45,19 @@ video_listing:
       - title
       - content
       - author
+  filters:
+    - name: Programming Languages
+      key: programming_lang
+      # "names" is an optional key; used to rename items for display on the filter list. The value
+      # used in the video file will be slugified first, then looked up in this dictionary. If a
+      # value is found here, it will be used, otherwise the item in the file will be used as-is.
+      names:
+        css: CSS
+        r: R
+        python: Python
+        rust: Rust
+    - name: Authors
+      key: author
 
 defaults:
   - scope:
