--- a/_data/2022/covenant-university/teaching_assistants.yml
+++ b/_data/2022/covenant-university/teaching_assistants.yml
@@ -5,5 +5,5 @@
 
 - name: Theresa Okediya
   bio: Theresa Okediya is a Technical Tutor in different I.T institutions. She is a Masters degree holder in computer Science and her research areas include, data science and machine learning. She enjoys using data science skills to solve problem in different sectors but most especially the health sector. She is a passionate teacher. Her driving objective as a technical Tutor is that _'Technology is the new universal language and every one both young and old should learn how to speak this language'_
-  image:
+  image: /assets/images/theresa.png
   website:
