--- a/_config.yml
+++ b/_config.yml
@@ -56,6 +56,7 @@ video_listing:
         r: R
         python: Python
         rust: Rust
+        javascript: JavaScript
     - name: Authors
       key: author
 
