--- a/_data/2022/hong-kong/speakers.yml
+++ b/_data/2022/hong-kong/speakers.yml
@@ -1,12 +1,12 @@
 - name: Tarani Chandola
   image: /assets/images/thomasdavidson.jpeg
-  bio: "Tarani is a professor of medical Sociology and the director of the Methods Hub in the Faculty of the Social Sciences at the University of Hong Kong. He obtained his DPhil in Sociology from Nuffield College, University of Oxford. His research is primarily on the social determinants of health, focusing on health inequalities and psychosocial factors, and the analysis of longitudinal cohort studies."
+  bio: "Tarani is a professor of medical sociology and the director of the Methods Hub in the Faculty of the Social Sciences at the University of Hong Kong. He obtained his DPhil in Sociology from Nuffield College, University of Oxford. His research is primarily on the social determinants of health, focusing on health inequalities and psychosocial factors, and the analysis of longitudinal cohort studies."
   website: https://sociology.hku.hk/people/tarani-chandola/
 
 
 - name: Thomas R. Davidson
   image: /assets/images/thomasdavidson.jpeg
-  bio: "Tom Davidson is an assistant professor of sociology at Rutgers University—New Brunswick. He obtained his PhD in sociology from Cornell University. His research and teaching interests include political sociology and social movements, culture, and social networks. He specializes in using computational methods including natural language processing and machine-learning to analyze data collected from social media platforms."
+  bio: "Tom Davidson is an assistant professor of sociology at Rutgers University—New Brunswick. He received his PhD in sociology from Cornell University. His research and teaching interests include political sociology and social movements, culture, and social networks. He specializes in using computational methods including natural language processing and machine-learning to analyze data collected from social media platforms."
   website: https://www.thomasrdavidson.com/
 
 
