--- a/_data/2022/covenant-university/schedule.yml
+++ b/_data/2022/covenant-university/schedule.yml
@@ -24,7 +24,7 @@
     - name: "**14:00-15:30** Tutorials/Flash Talks"
     - name: "**15:30-18:00** Group Exercises"
     - name: "**18:00-** Dinner"
-    - name: "Required Readings: <br/> [North and South: Naming practices and the hidden dimension of global disparities in knowledge production](https://www.pnas.org/doi/abs/10.1073/pnas.2119373119)"
+    - name: "Required Readings: <br/> [North and South: Naming practices and the hidden dimension of global disparities in knowledge production](https://www.pnas.org/doi/abs/10.1073/pnas.2119373119) <br/> [Bibliometric analysis of global migration health research in peer-reviewed literature (2000–2016)](https://doi.org/10.1186/s12889-018-5689-x)"
 
 
 - date: 2022-06-22
