--- a/_data/2022/covenant-university/schedule.yml
+++ b/_data/2022/covenant-university/schedule.yml
@@ -24,7 +24,7 @@
     - name: "**14:00-15:30** Tutorials/Flash Talks"
     - name: "**15:30-18:00** Group Exercises"
     - name: "**18:00-** Dinner"
-    - name: "Required Readings: <br/> [North and South: Naming practices and the hidden dimension of global disparities in knowledge production](https://www.pnas.org/doi/abs/10.1073/pnas.2119373119) <br/> [Bibliometric analysis of global migration health research in peer-reviewed literature (2000–2016)](https://doi.org/10.1186/s12889-018-5689-x) <br/> [A bibliometric analysis of childhood immunization research productivity in Africa since the onset of the Expanded Program on Immunization in 1974](https://doi.org/10.1186/1741-7015-11-66) <br/> [A bibliometric analysis of COVID-19 research in Africa](http://dx.doi.org/10.1136/bmjgh-2021-005690)"
+    - name: "Required Readings: <br/> <ul><li>[North and South: Naming practices and the hidden dimension of global disparities in knowledge production](https://www.pnas.org/doi/abs/10.1073/pnas.2119373119)</li><li>[Bibliometric analysis of global migration health research in peer-reviewed literature (2000–2016)](https://doi.org/10.1186/s12889-018-5689-x)</li><li>[A bibliometric analysis of childhood immunization research productivity in Africa since the onset of the Expanded Program on Immunization in 1974](https://doi.org/10.1186/1741-7015-11-66)</li><li>[A bibliometric analysis of COVID-19 research in Africa](http://dx.doi.org/10.1136/bmjgh-2021-005690)</li></ul>"
 
 
 - date: 2022-06-22
