--- a/_data/2022/covenant-university/schedule.yml
+++ b/_data/2022/covenant-university/schedule.yml
@@ -18,7 +18,10 @@
   events:
     - name: "**09:00-09:15** Housekeeping and Announcements."
     - name: "**09:15-10:30** Happy House"
-    - name: "**10:30-12:00** North and South: Naming practices and the hidden dimension of global disparities in knowledge production <br/>This session will introduce participants to bibliometric analysis using data from Scopus database."
+    - name: "**10:30-12:00** North and South: *Naming practices and the hidden dimension of global disparities in knowledge production.*
+    
+    Contemporary social sciences aim to be diverse and inclusive, yet traces of historical supremacy persist in scientific practices. One such practice is geographical references in article titles. This presentation will highlight important North-South gaps in knowledge production using more than half a million social science research articles indexed by Scopus (1996 to 2020)."
+    
     - name: "**12:00-13:00** Tutorials"
     - name: "**13:00-14:00** Lunch"
     - name: "**14:00-15:30** Tutorials/Flash Talks"
