--- a/_data/2022/howard-mathematica/people.yml
+++ b/_data/2022/howard-mathematica/people.yml
@@ -47,6 +47,11 @@ roundtable discussions:
 lunchtime talks:
   title: Bite-Sized Lunchtime Talks
   people:
+    - name: Cite Black Women
+      image: /assets/images/Cite_Black_Women.png
+      bio: "It's simple: Cite Black Women. We have been producing knowledge since we blessed this earth. We theorize, we innovate, we revolutionize the world. We do not need mediators. We do not need interpreters. It's time to disrupt the canon. It's time to upturn the erasures of history. It's time to give credit where credit is due. We must reconfigure the politics of knowledge production by engaging in a radical praxis of citation that acknowledges and honors Black women’s transnational intellectual production."
+      website: https://www.citeblackwomencollective.org/
+  
     - name: vary CSS
       image: /assets/images/VaryCSS.png
       bio: "Computational Social Science is an exciting new field of research, and we think it should be diverse and inclusive as it grows. To this end, we provide links to resources, which are intended to support new and emerging CSS scholars currently underrepresented in the field. We also maintain a database of these scholars, which can be used for collaboration and networking, or for finding new voices to speak at conferences, on panels, and in workshop tutorials. These resources are compiled and updated by the CSS community."
