sicss-agenda-cu

--- a/_data/2022/covenant-university/schedule.yml
+++ b/_data/2022/covenant-university/schedule.yml
@@ -17,7 +17,7 @@
 - date: 2022-06-21
   events:
     - name: "**09:00-09:15** Housekeeping and Announcements."
-    - name: "**09:15-10:30** Happy House"
+    - name: "**09:15-10:30** Happy Hour"
     - name: "**10:30-12:00** North and South: *Naming practices and the hidden dimension of global disparities in knowledge production.*
     <br/> 
     Contemporary social sciences aim to be diverse and inclusive, yet traces of historical supremacy persist in scientific practices. One such practice is geographical references in article titles. This presentation will highlight important North-South gaps in knowledge production using more than half a million social science research articles indexed by Scopus (1996 to 2020)."
@@ -41,7 +41,7 @@
 - date: 2022-06-22
   events:
     - name: "**09:00-09:15** Housekeeping and Announcements."
-    - name: "**09:15-10:30** Happy House"
+    - name: "**09:15-10:30** Happy Hour"
     - name: "**10:30-12:00** Introduction to Internet Search Data."
     - name: "**12:00-13:00** Tutorials"
     - name: "**13:00-14:00** Lunch"
@@ -54,7 +54,7 @@
 - date: 2022-06-23
   events:
     - name: "**09:00-09:15** Housekeeping and Announcements"
-    - name: "**09:15-10:30** Happy House"
+    - name: "**09:15-10:30** Happy Hour"
     - name: "**10:30-12:00** Social Survey meets Online Survey | Machine Learning."
     - name: "**12:00-13:00** Tutorials"
     - name: "**13:00-14:00** Lunch"
@@ -66,7 +66,7 @@
 - date: 2022-06-24
   events:
     - name: "**09:00-09:15** Housekeeping and Announcements."
-    - name: "**09:15-10:30** Happy House"
+    - name: "**09:15-10:30** Happy Hour"
     - name: "**10:30-12:00** Text Analysis"
     - name: "**12:00-13:00** Tutorials"
     - name: "**13:00-14:00** Lunch"
