schedule-sicss-cu

--- a/_data/2022/covenant-university/schedule.yml
+++ b/_data/2022/covenant-university/schedule.yml
@@ -73,7 +73,9 @@
     
     - [Characterizing low effort responding among young African adults recruited via Facebook advertising](https://doi.org/10.1371/journal.pone.0250303)
     
-    - [Evaluating sampling biases from third-party reporting as a method for improving survey measures of sensitive behaviors](https://www.sciencedirect.com/science/article/abs/pii/S0378873316300454)"
+    - [Evaluating sampling biases from third-party reporting as a method for improving survey measures of sensitive behaviors](https://www.sciencedirect.com/science/article/abs/pii/S0378873316300454)
+    
+    - [Using an Online Sample to Estimate the Size of an Offline Population](https://doi.org/10.1007/s13524-019-00840-z)"
      
     - name: "**10:30-12:00** Social Survey meets Online Survey || Machine Learning."
     - name: "**12:00-13:00** Tutorials"
