--- a/_data/2022/covenant-university/schedule.yml
+++ b/_data/2022/covenant-university/schedule.yml
@@ -24,6 +24,8 @@
     
     - [North and South: Naming practices and the hidden dimension of global disparities in knowledge production](https://www.pnas.org/doi/abs/10.1073/pnas.2119373119)
 
+    - [The demography of the peripatetic researcher: Evidence on highly mobile scholars from the Web of Science](https://doi.org/10.48550/arXiv.1907.13414)
+    
     - [Bibliometric analysis of global migration health research in peer-reviewed literature (2000–2016)](https://doi.org/10.1186/s12889-018-5689-x)
 
     - [A bibliometric analysis of childhood immunization research productivity in Africa since the onset of the Expanded Program on Immunization in 1974](https://doi.org/10.1186/1741-7015-11-66)
