--- a/_data/2022/covenant-university/speakers.yml
+++ b/_data/2022/covenant-university/speakers.yml
@@ -1,4 +1,4 @@
-- name: Diego Alburez-Gutierrez
+- name: "Diego Alburez-Gutierrez"
   bio: "Diego Alburez-Gutierrez (PhD in Demography, London School of Economics 2018) is a Research Scientist at the Max Planck Institute for Demographic Research, where he specialises in inter-generational demography. His work integrates non-traditional data (e.g., from digital or computational sources) with established demographic sources (e.g. censuses and population registers)."
   image: /assets/images/diego.JPG
   website: http://alburez.me/
