--- a/_data/2022/covenant-university/schedule.yml
+++ b/_data/2022/covenant-university/schedule.yml
@@ -93,7 +93,7 @@
     - name: "**10:30-12:00** Text Analysis"
     - name: "**12:00-13:00** Tutorials"
     - name: "**13:00-14:00** Lunch"
-    - name: "**14:00-15:30** Tutorials/Flash Talks"
+    - name: "**14:00-15:30** Invited Presentation: Open science and reproducible research in the digital age"
     - name: "**15:30-18:00** Group Exercises"
     - name: "**18:00-** Dinner"
 
