siccs-cu-agenda

--- a/_data/2022/covenant-university/schedule.yml
+++ b/_data/2022/covenant-university/schedule.yml
@@ -64,8 +64,20 @@
     - name: "**15:30-18:00** Group Exercises"
     - name: "**18:00-** Dinner" 
   
-  
+
 - date: 2022-06-23
+  events:
+    - name: "**09:00-09:15** Housekeeping and Announcements."
+    - name: "**09:15-10:30** Happy Hour"
+    - name: "**10:30-12:00** Text Analysis"
+    - name: "**12:00-13:00** Tutorials"
+    - name: "**13:00-14:00** Lunch"
+    - name: "**14:00-15:30** Invited Presentation"
+    - name: "**15:30-18:00** Group Exercises"
+    - name: "**18:00-** Dinner"
+
+
+- date: 2022-06-24
   events:
     - name: "**09:00-09:15** Housekeeping and Announcements"
     - name: "**09:15-10:30** Happy Hour
@@ -80,17 +92,6 @@
     - [Using an Online Sample to Estimate the Size of an Offline Population](https://doi.org/10.1007/s13524-019-00840-z)"
      
     - name: "**10:30-12:00** Social Survey meets Online Survey || Machine Learning."
-    - name: "**12:00-13:00** Tutorials"
-    - name: "**13:00-14:00** Lunch"
-    - name: "**14:00-15:30** Invited Talk <br/> Mass Collaboration"
-    - name: "**15:30-18:00** Group Exercises"
-    - name: "**18:00-** Dinner"
-
-- date: 2022-06-24
-  events:
-    - name: "**09:00-09:15** Housekeeping and Announcements."
-    - name: "**09:15-10:30** Happy Hour"
-    - name: "**10:30-12:00** Text Analysis"
     - name: "**12:00-13:00** Tutorials"
     - name: "**13:00-14:00** Lunch"
     - name: "**14:00-15:30** Invited Presentation: Open science and reproducible research in the digital age"
