--- a/_data/2022/haifa/schedule.yml
+++ b/_data/2022/haifa/schedule.yml
@@ -4,7 +4,7 @@
 
 - date: July 3, 2022
   events:
-   - name: "09:00 - 10:00 Introduction + ethics: Baruch Eitam "
+   - name: "09:00 - 10:00 Introduction + ethics in AI: Dr. Ofra Amir  "
    - name: "10:00 - 12:00 Python basics: Amit Donner "
    - name: "12:00 - 13:00 Lunch"
    - name: "13:00 - 15:00 Introduction to computational social science 1: Igor Kleiner "
