--- a/_data/2022/haifa/faculty.yml
+++ b/_data/2022/haifa/faculty.yml
@@ -1,5 +1,5 @@
 - name: Baruch Eitam
-  bio: 
+  bio: Baruch Is a Professor of Psychology at the University of Haifa. His lab studies interactions between cognitive processes and reward/motivation in general. Key lines of research involve reinforcement from sensorimotor predictability and the mental prioritization of information by its relevance to the task at hand, as well as conscious perception. Before joining Haifa in mid-2011, Baruch attained his PhD at the Hebrew University (2009) and was a postdoctoral researcher at Columbia University (with Tory Higgins).
   image: /assets/images/Baruch_Eitam.jpg
   website: https://sites.google.com/view/mcl-haifa/home
 
