--- a/_data/2022/edinburgh/speakers.yml
+++ b/_data/2022/edinburgh/speakers.yml
@@ -15,7 +15,7 @@
 
 - name: Carolina Scarton
   image: /assets/images/CScarton.jpg
-  bio: "Dr Carolina Scarton is an Academic Fellow at the Department of Computer Science, University of Sheffield, UK where she is also a member of the Natural Language Processing group and part of the GATE team. Dr Scarton's research area is Natural Language Processing (NLP). She is particularly interested in text adaptation, machine translation, online misinformation detection and verification, evaluation of NLP task outputs, NLP applied to healthcare and robotics, and dialog systems."
+  bio: "Dr Carolina Scarton is Lecturer in Natural Language Processing, University of Sheffield, UK where she is also a member of the Natural Language Processing group and part of the GATE team. Dr Scarton is particularly interested in text adaptation, machine translation, online misinformation detection and verification, evaluation of NLP task outputs, NLP applied to healthcare and robotics, and dialog systems."
   website: https://carolscarton.github.io/
   
 - name: Maria Wolters
