--- a/_data/2022/covenant-university/schedule.yml
+++ b/_data/2022/covenant-university/schedule.yml
@@ -89,7 +89,9 @@
     
     - [Evaluating sampling biases from third-party reporting as a method for improving survey measures of sensitive behaviors](https://www.sciencedirect.com/science/article/abs/pii/S0378873316300454)
     
-    - [Using an Online Sample to Estimate the Size of an Offline Population](https://doi.org/10.1007/s13524-019-00840-z)"
+    - [Using an Online Sample to Estimate the Size of an Offline Population](https://doi.org/10.1007/s13524-019-00840-z)
+    
+    - [A scoping review on the use of machine learning in research on social determinants of health: Trends and research prospects](https://doi.org/10.1016/j.ssmph.2021.100836)"
      
     - name: "**10:30-12:00** Social Survey meets Online Survey || Machine Learning."
     - name: "**12:00-13:00** Tutorials"
