added placeholder image and made some 'coming soon' notes.

--- a/_data/2022/jias/people.yml
+++ b/_data/2022/jias/people.yml
@@ -98,13 +98,13 @@ speakers:
       image: /assets/images/jias_vukosi.png
 
     - name: Lindiwe Matlali
-      bio:
-      image:
+      bio: coming soon
+      image: /assets/images/jias_placeholder.png
       website: https://africateengeeks.co.za/
 
     - name: Ari Melenciano
-      bio:
-      image:
+      bio: coming soon
+      image: /assets/images/jias_placeholder.png
       website: https://www.ariciano.com/
 
 
