--- a/_data/2022/hong-kong/speakers.yml
+++ b/_data/2022/hong-kong/speakers.yml
@@ -10,6 +10,12 @@
   website: https://www.thomasrdavidson.com/
 
 
+- name: King-wa Fu
+  image: /assets/images/FuKingwa.jpeg
+  bio: "Dr. King-wa FU is an Associate Professor at the Journalism and Media Studies Centre of The University of Hong Kong. His research interests include China’s information governance, media and political participation, computational social sciences, health and the media, and media use by the younger generation. He is the Principle Investigator of Weiboscope, WeChatscope, and ANTIELAB Research Data Archive."
+  website: https://jmsc.hku.hk/people/king-wa-fu/
+
+
 - name: Ashley Gromis
   image: /assets/images/agromis.png
   bio: "Ashley Gromis is a postdoctoral research associate at the Eviction Lab of Princeton University. She completed her PhD in sociology at the University of California, Los Angeles. Her research focuses on how social networks and local communities provide the social context for individual decisions and events that aggregate to form macro-level patterns across space and time."
