--- a/_data/2022/hong-kong/speakers.yml
+++ b/_data/2022/hong-kong/speakers.yml
@@ -12,7 +12,7 @@
 
 - name: King-wa Fu
   image: /assets/images/FuKingwa.jpeg
-  bio: "Dr. King-wa FU is an Associate Professor at the Journalism and Media Studies Centre of The University of Hong Kong. His research interests include China’s information governance, media and political participation, computational social sciences, health and the media, and media use by the younger generation. He is the Principle Investigator of Weiboscope, WeChatscope, and ANTIELAB Research Data Archive."
+  bio: "King-wa FU is an Associate Professor at the Journalism and Media Studies Centre of The University of Hong Kong. He obtained his PhD in journalism and media studies from the University of Hong Kong. His research interests include China’s information governance, media and political participation, computational social sciences, health and the media, and media use by the younger generation. He is the Principle Investigator of Weiboscope, WeChatscope, and ANTIELAB Research Data Archive."
   website: https://jmsc.hku.hk/people/king-wa-fu/
 
 
