--- a/_data/2022/haifa/faculty.yml
+++ b/_data/2022/haifa/faculty.yml
@@ -19,6 +19,6 @@
   website: https://www.talikristal.com
   
 - name: Tamir Gadot
-  bio:
+  bio: Tamir is the Administrative Manager of SICSS Haifa program and he is the Administrative Manager of DSRC – The University of Haifa’s Data Science Research Center and of CRI - Caesarea Rothschild Institute for Interdisciplinary Applications of Computer Science.
   image: /assets/images/Tamir_Gadot.jpg
-  website: 
+  website: https://dsrc.haifa.ac.il
