--- a/_data/2022/haifa/teaching_assistants.yml
+++ b/_data/2022/haifa/teaching_assistants.yml
@@ -12,5 +12,5 @@
 
 - name: Tomer Sidi
   bio: Research Areas: Machine Learning, Deep Learning, Computational Structural Biology.
-  image:
+  image: /assets/images/Thomer-Sidi.jpg
   website:
