--- a/_data/2022/haifa/location.yml
+++ b/_data/2022/haifa/location.yml
@@ -1,4 +1,4 @@
-image: /assets/images/haifa.jpg
+image: /assets/images/Haifa2.jpg
 title: Haifa
 subtitle: University of Haifa
 description: "July 3 to July 14, 2022"
