--- a/_data/2022/howard-mathematica/hero.yml
+++ b/_data/2022/howard-mathematica/hero.yml
@@ -1,2 +1,2 @@
-header_2: "June 18 to July 1, 2022 | Howard University"
+header_2: "June 18 to July 1, 2022 | Howard University | Virtual event"
 location: "SICSS-Howard/Mathematica"
