--- a/_data/2022/howard-mathematica/schedule.yml
+++ b/_data/2022/howard-mathematica/schedule.yml
@@ -3,20 +3,20 @@
 - date: 2022-06-18
   name: Praxis to Power
   events: 
-    - name: "10:00 - 11:45 Welcome, Praxis to Power Day 1 Introduction and logistics"
+    - name: "10:00 - 11:45 Welcome, Praxis to Power Day 1 Introduction and logistics (*Zoom*)"
     - name: "11:45 - 12:00 Break"
-    - name: '12:00 - 1:00 "Personal Experiences of African Americans in the Academy" - Faculty Roundtable'
+    - name: '12:00 - 1:00 "Personal Experiences of African Americans in the Academy" - Howard Faculty Roundtable (*Zoom*)'
     - name: "1:00 - 1:15 Break"
-    - name: "1:15 - 1:45 TBD"
+    - name: "1:15 - 1:45 TBA (*Zoom*)"
     - name: "1:45 - 2:00 Break"
-    - name: "2:00 - 5:00 TBD"
+    - name: "2:00 - 5:00 R Workship (*Zoom*)"
 
 
 - date: 2022-06-19
   name: Praxis to Power /Juneteenth
   events:
-    - name: "10:00 - 11:00 Praxis to Power Day 2 Introduction and logistics"
-    - name: "11:00 - 2:00 Open Office Hours, or SICSS-Howard/Mathematica Exclusive Content Review (on your own), or Pre-Arrival Material Review (on your own)
+    - name: "10:00 - 11:00 Praxis to Power Day 2 Introduction and logistics (*Zoom*)"
+    - name: "11:00 - 2:00 Open Office Hours with Organizers (*Zoom*), or SICSS-Howard/Mathematica Exclusive Content Review (on your own), or Pre-Arrival Material Review (on your own)
     
     
           **Open Office Hours (*Zoom*)**
@@ -35,86 +35,95 @@
 
 
 
-    - name: "2:00 - 5:00 TBD" 
+    - name: "2:00 - 5:00 R Workshop (*Zoom*)" 
     - name: "5:00 - 5:15 Break"
-    - name: "5:15 - 6:15 SICSS-Howard/Mathematica Kick-off and Opening Plenary and Q&A - TBD"
+    - name: "5:15 - 6:15 SICSS-Howard/Mathematica Kick-off and Opening Plenary and Q&A: Speaker TBA (*Zoom*)"
 
   
 - date: 2022-06-20
-  name: Day 1
+  name: "Day 1: Introduction and Ethics"
   events:
-    - name: "9:00 - 10:00"
-    - name: "10:00 - 10:30"
-    - name: "10:30 - 11:30"
-    - name: "11:30 - 12:00"
-    - name: "12:00 - 1:00" 
-    - name: "1:00 - 1:30"
-    - name: "1:30 - 1:45"
-    - name: "1:45 - 2:45"
-    - name: "2:45 - 3:15"
-    - name: "3:15 - 3:45"
-    - name: "3:45 - 4:00"
+    - name: "9:00 - 10:00 R and Python Office hours with Mathematica TAs (as needed) (*Zoom*)"
+    - name: "10:00 - 10:30 Institute Introduction and logistics (*Zoom*)"
+    - name: "10:30 - 11:30 Small group discussions (*Zoom*)"
+    - name: "11:30 - 12:00 Break"
+    - name: '12:00 - 1:00 “Getting the most out of your SICSS experience” - Roundtable discussion with SICSS alums of color OR R and Python Office hours with Mathematica TAs (as needed) (*Zoom*)
+    
+        - MODERATOR: Naniette Coleman (SICSS-Princeton 2019, organizer of SICSS-Howard/Mathematica 2020-present)
+        
+        - Speaker TBA
+        
+        - Speaker TBA
+        
+        - Speaker TBA 
+        
+        - Speaker TBA'
+        
+    - name: "1:00 - 1:30 Break"
+    - name: "1:30 - 1:45 Introduction to the group exercise (*Zoom*)"
+    - name: "1:45 - 2:45 Small group discussion of case study (*Zoom*)"
+    - name: "2:45 - 3:15 Whole group debrief about case study (*Zoom*)"
+    - name: "3:15 - 3:45 Debrief and logistics (*Zoom*)"
+    - name: "3:45 - 4:00 Introduction to new SICSS-Howard/Mathematica site data project"
 
   
 - date: 2022-06-21
-  name: Day 2
+  name: "Day 2: Collecting Digital Trace Data"
   events:
-    - name: "9:00 - 10:00"
-    - name: "10:00 - 10:15"
-    - name: "10:15 - 11:30"
-    - name: "11:30 - 12:00"
-    - name: "12:00 - 1:00"
-    - name: "1:00 - 1:15"
-    - name: "1:15 - 2:30"
-    - name: "2:30 - 3:30"
-    - name: "3:30 - 3:45"
+    - name: "9:00 - 10:00 R and Python Office hours with Mathematica TAs (as needed) (*Zoom*)"
+    - name: "10:00 - 10:15 Logistics and introduction to group exercise (*Zoom*)"
+    - name: "10:15 - 11:30 Identify a Research Question with Digital Trace Data OR Content-specific Office hours with Mathematica TAs (as needed) (*Zoom*)"
+    - name: "11:30 - 12:00 Break"
+    - name: "12:00 - 1:00 Bite-Sized Lunchtime Talk OR R, Python, and STATA Office hours with Mathematica TAs (as needed) (*Zoom*)"
+    - name: "1:00 - 1:15 Break"
+    - name: "1:15 - 2:30 Develop a Sampling Frame OR Content-specific Office hours with Mathematica TAs (as needed) (*Zoom*)"
+    - name: "2:30 - 3:30 Populate the Sampling Frame with Screen-Scraping (*Zoom*)"
+    - name: "3:30 - 3:45 Debrief and logistics (*Zoom*)"
   
   
 - date: 2022-06-22
   name: Day 3
   events:
-    - name: "9:00 - 10:00"
-    - name: "10:00 - 10:15"
-    - name: "10:15 - 11:30"
-    - name: "11:30 - 12:00"
-    - name: "12:00 - 1:00"
-    - name: "1:00 - 1:15"
-    - name: "1:15 - 3:30"
-    - name: "3:30 - 3:45"
+    - name: "9:00 - 10:00 R and Python Office hours with Mathematica TAs (as needed) (*Zoom*)"
+    - name: "10:00 - 10:15 Logistics and introduction to group exercise (*Zoom*)"
+    - name: "10:15 - 11:30 Extract Features from Tweets (*Zoom*) OR Content-specific Office hours with Mathematica TAs (as needed) (*Zoom*)"
+    - name: "11:30 - 12:00 Break"
+    - name: "12:00 - 1:00 Bite-Sized Lunchtime Talk (encouraged) (*Zoom*) OR R, Python, and STATA Office hours with Mathematica TAs (as needed) (*Zoom*)"
+    - name: "1:00 - 1:15 Break"
+    - name: "1:15 - 3:30 Predict Features of Tweets associated with Retweets and Produce Visualization (*Zoom*) OR Content-specific Office hours with Mathematica TAs (as needed) (*Zoom*)"
+    - name: "3:30 - 3:45 Debrief and logistics (*Zoom*)"
 
 
 - date: 2022-06-23
   name: Day 4
   events:
-    - name: "9:00 - 10:00"
-    - name: "10:00 - 10:15"
-    - name: "10:15 - 10:30"
-    - name: "10:30 - 11:30"
-    - name: "11:30 - 12:00"
-    - name: "12:00 - 1:00"
-    - name: "1:00 - 1:15"
-    - name: "1:15 - 3:00"
-    - name: "3:00 - 3:15"
-    - name: "3:15 - 3:30"
-    - name: "3:30 - 3:45"
+    - name: "9:00 - 10:00 R, Python, and STATA Office hours with Mathematica TAs (as needed) (*Zoom*)"
+    - name: "10:00 - 10:15 Logistics (*Zoom*)"
+    - name: "10:15 - 10:30 Introduction to the group exercise (*Zoom*)"
+    - name: "10:30 - 11:30 Morning group exercise (*Zoom*) OR Content-specific Office hours with Mathematica TAs (as needed) (*Zoom*)"
+    - name: "11:30 - 12:00 Break"
+    - name: "12:00 - 1:00 Bite-Sized Lunchtime Talk (encouraged) (*Zoom*) OR R, Python, and STATA Office hours with Mathematica TAs (as needed) (*Zoom*)"
+    - name: "1:00 - 1:15 Break"
+    - name: "1:15 - 3:00 Afternoon group exercise (*Zoom*) OR Content-specific Office hours with Mathematica TAs (as needed) (*Zoom*)"
+    - name: "3:00 - 3:15 Break"
+    - name: "3:15 - 3:30 Whole group debrief about group exercise (*Zoom*)"
+    - name: "3:30 - 3:45 Debrief and logistics (*Zoom*)"
 
 
 - date: 2022-06-24
   name: Day 5
   events:
-    - name: "9:00 - 10:00"
-    - name: "10:00 - 10:15"
-    - name: "10:15 - 10:30"
-    - name: "10:30 - 11:30"
-    - name: "11:30 - 12:00"
-    - name: "12:00 - 1:00"
-    - name: "1:00 - 1:15"
-    - name: "1:15 - 3:00"
-    - name: "3:00 - 3:15"
-    - name: "3:15 - 3:30"
-    - name: "3:30 - 3:45"
-    - name: "3:45 - 4:00"
-    - name: "4:00 - 5:00"
+    - name: "9:00 - 10:00 R, Python, and STATA Office hours with Mathematica TAs (as needed) (*Zoom*)"
+    - name: "10:00 - 10:15 Logistics (*Zoom*)"
+    - name: "10:15 - 10:30 Introduction to the group exercise (*Zoom*)"
+    - name: "10:30 - 11:30 Content-specific Office hours with Mathematica TAs (as needed) (*Zoom*)"
+    - name: "11:30 - 12:00 Break"
+    - name: "12:00 - 1:00 Bite-Sized Lunchtime Talk (encouraged) (*Zoom*)  OR R and Python Office hours with Mathematica TAs (as needed) (*Zoom*)"
+    - name: "1:00 - 1:15 Break"
+    - name: "1:15 - 3:00 Content-specific Office hours with Mathematica TAs (as needed) (*Zoom*)"
+    - name: "3:00 - 3:15 Break"
+    - name: "3:15 - 3:30 Whole group debrief about group exercise (*Zoom*)"
+    - name: "3:30 - 3:45 Debrief and logistics (*Zoom*)"
 
 
 - date: 2022-06-25
@@ -128,56 +137,60 @@
 - date: 2022-06-27
   name: Day 6
   events:
-    - name: "10:00 - 10:15"
-    - name: "10:15 - 10:45"
-    - name: "10:45 - 11:45"
-    - name: "11:45 - 12:00"
-    - name: "12:00 - 1:00"
-    - name: "1:00 - 2:30"
-    - name: "2:30 - 3:30"
-    - name: "3:30 - 3:45"
-    - name: "3:45 - 4:00"
-    - name: "4:00 - 5:30"
+    - name: "10:00 - 10:15 Logistics and Research Speed Dating Logistics (*Zoom*)"
+    - name: "10:15 - 10:45 Break"
+    - name: "10:45 - 11:45 Round 1-6 (ten minutes each) (*Zoom*)"
+    - name: "11:45 - 12:00 Break"
+    - name: "12:00 - 1:00 Bite-Sized Lunchtime Talk (encouraged) (*Zoom*)"
+    - name: "1:00 - 2:30 Break"
+    - name: "2:30 - 3:30 Round 7-12 (*Zoom*)"
+    - name: "3:30 - 3:45 Break"
+    - name: "3:45 - 4:00 Group debrief (join research teams) (*Zoom*)"
+    - name: "4:00 - 5:30 Guest Speaker TBA: live session to include Q&A and office hour (*Zoom*)"
     
   
 - date: 2022-06-28
   name: Day 7
   events:
-    - name: "10:00 - 10:15"
-    - name: "10:15 - 12:00"
-    - name: "12:00 - 1:00"
-    - name: "1:00 - 4:00"
-    - name: "4:00 - 5:30"
+    - name: "Mathematica TAs are available via email for consultation (please see Slack)"
+    - name: "10:00 - 10:15 Logistics (*Zoom*)"
+    - name: "10:15 - 12:00 Work on group projects (*Zoom*)"
+    - name: "12:00 - 1:00 Bite-Sized Lunchtime Talk (encouraged) (*Zoom*)"
+    - name: "1:00 - 4:00 Work on group projects (*Zoom*)"
+    - name: "4:00 - 5:30 Guest Speaker TBA: live session to include Q&A and office hour (*Zoom*)"
     
     
 - date: 2022-06-29
   name: Day 8
   events:
-    - name: "10:00 - 10:30"
-    - name: "10:30 - 12:00"
-    - name: "12:00 - 1:00"
-    - name: "1:00 - 4:00"
-    - name: "4:00 - 5:30"
+    - name: "Mathematica TAs are available via email for consultation (please see Slack)"
+    - name: "10:00 - 10:30 Logistics (*Zoom*)"
+    - name: "10:30 - 12:00 Work on group projects (*Zoom*)"
+    - name: "12:00 - 1:00 Live Mathematica Roundtable (encouraged) (*Zoom*)"
+    - name: "1:00 - 4:00 Work on group projects (*Zoom*)"
+    - name: "4:00 - 5:30 Guest Speaker TBA: live session to include Q&A and office hour (*Zoom*)"
 
 
 - date: 2022-06-30
   name: Day 9
   events:
-    - name: "10:00 - 10:30"
-    - name: "10:30 - 12:00"
-    - name: "12:00 - 1:00"
-    - name: "1:00 - 4:00"
-    - name: "4:00 - 5:30"
+    - name: "Mathematica TAs are available via email for consultation (please see Slack)"
+    - name: "10:00 - 10:30 Logistics (*Zoom*)"
+    - name: "10:30 - 12:00 Work on group projects (*Zoom*)"
+    - name: "12:00 - 1:00 Bite-Sized Lunchtime Talk (encouraged) (*Zoom*)"
+    - name: "1:00 - 4:00 Work on group projects (*Zoom*)"
+    - name: "4:00 - 5:30 Guest Speaker TBA: live session to include Q&A and office hour (*Zoom*)"
     
 
 - date: 2022-07-01
   name: Day 10
   events:
-    - name: "10:00 - 10:30"
-    - name: "10:30 - 12:00"
-    - name: "12:00 - 12:30"
-    - name: "12:30 - 12:50"
-    - name: "12:50 - 4:20"
-    - name: "4:20 - 5:00"
-    - name: "5:00 - 5:15"
-    - name: "5:15 - 5:45"
+    - name: "Mathematica TAs are available via email for consultation (please see Slack)"
+    - name: "10:00 - 10:30 Logistics (*Zoom*)"
+    - name: "10:30 - 12:00 SICSS-Howard/Mathematica 2021 Keynote Address - Speaker TBA (*Zoom*)"
+    - name: "12:00 - 12:30 Break"
+    - name: "12:30 - 12:50 Overview of Group and Individual Project Presentations (*Zoom*)"
+    - name: "12:50 - 4:20 Group and Individual Project Presentations (*Zoom*)"
+    - name: "4:20 - 5:00 Closing Plenary address and Q&A, Mathematica (*Zoom*)"
+    - name: "5:00 - 5:15 Break"
+    - name: "5:15 - 5:45 SICSS-Howard/Mathematica Final Debrief and conclusion (*Zoom*)"
