--- a/_data/2022/haifa/faculty.yml
+++ b/_data/2022/haifa/faculty.yml
@@ -1,24 +1,24 @@
 - name: Baruch Eitam
-  bio: Baruch Is a Professor of Psychology at the University of Haifa. His lab studies interactions between cognitive processes and reward/motivation in general. Key lines of research involve reinforcement from sensorimotor predictability and the mental prioritization of information by its relevance to the task at hand, as well as conscious perception. Before joining Haifa in mid-2011, Baruch attained his PhD at the Hebrew University (2009) and was a postdoctoral researcher at Columbia University (with Tory Higgins).
+  bio: "Baruch Is a Professor of Psychology at the University of Haifa. His lab studies interactions between cognitive processes and reward/motivation in general. Key lines of research involve reinforcement from sensorimotor predictability and the mental prioritization of information by its relevance to the task at hand, as well as conscious perception. Before joining Haifa in mid-2011, Baruch attained his PhD at the Hebrew University (2009) and was a postdoctoral researcher at Columbia University (with Tory Higgins)."
   image: /assets/images/Baruch_Eitam.jpg
   website: https://sites.google.com/view/mcl-haifa/home
 
 - name: Pavel Goldstein
-  bio: I have completed , Master in Biostatistics and PhD in pain neuroscience. During my PhD studies, I was exposed to the field of pain research that is still overflowed with endless debates about basic questions: how we measure pain? What causes pain? How we treat pain? Completing graduate studies I found myself at the Prof. Tor Wager’s lab, leading projects with a focus on digital solutions for chronic pain. In 2019 I founded Integrative Pain Laboratory at the University of Haifa to gather novel understanding of chronic pain conditions, developing new ways of measuring, preventing and treating chronic pain.
+  bio: "I have completed , Master in Biostatistics and PhD in pain neuroscience. During my PhD studies, I was exposed to the field of pain research that is still overflowed with endless debates about basic questions: how we measure pain? What causes pain? How we treat pain? Completing graduate studies I found myself at the Prof. Tor Wager’s lab, leading projects with a focus on digital solutions for chronic pain. In 2019 I founded Integrative Pain Laboratory at the University of Haifa to gather novel understanding of chronic pain conditions, developing new ways of measuring, preventing and treating chronic pain."
   image: /assets/images/Goldstein_pavel.jpg
   website: https://hw.haifa.ac.il/en/people/sph/pavel-goldstein
 
 - name: Mor Peleg
-  bio: Mor Peleg is Full Professor of information systems, Chair of the BSc Data Science program and head of the University of Haifa’s Data Science Center, former Chair of the Department of Information Systems. She is Editor-in-Chief of the Journal of Biomedical Informatics, Editorial Board Member of Methods of Information in Medicine and is International Fellow of the American College of Medical Informatics  and Fellow of the International Academy of Health Sciences Informatics. 
+  bio: "Mor Peleg is Full Professor of information systems, Chair of the BSc Data Science program and head of the University of Haifa’s Data Science Center, former Chair of the Department of Information Systems. She is Editor-in-Chief of the Journal of Biomedical Informatics, Editorial Board Member of Methods of Information in Medicine and is International Fellow of the American College of Medical Informatics  and Fellow of the International Academy of Health Sciences Informatics." 
   image: /assets/images/Mor2019-Maysq2.jpg
   website: https://sites.google.com/hevra.haifa.ac.il/mpeleg
 
 - name: Tali Kristal
-  bio: Tali Kristal is Professor of Sociology at University of Haifa. The central focus of her research is on how and why positions in the economy such as organizations, industries, occupations, classes, and the relations between them, shape the evolution of economic inequality, and how these vary across time and countries.
+  bio: "Tali Kristal is Professor of Sociology at University of Haifa. The central focus of her research is on how and why positions in the economy such as organizations, industries, occupations, classes, and the relations between them, shape the evolution of economic inequality, and how these vary across time and countries."
   image: /assets/images/Tali_Kristal.jpg
   website: https://www.talikristal.com
   
 - name: Tamir Gadot
-  bio: Tamir is the Administrative Manager of SICSS Haifa program and he is the Administrative Manager of DSRC – The University of Haifa’s Data Science Research Center and of CRI - Caesarea Rothschild Institute for Interdisciplinary Applications of Computer Science.
+  bio: "Tamir is the Administrative Manager of SICSS Haifa program and he is the Administrative Manager of DSRC – The University of Haifa’s Data Science Research Center and of CRI - Caesarea Rothschild Institute for Interdisciplinary Applications of Computer Science."
   image: /assets/images/Tamir_Gadot.jpg
   website: https://dsrc.haifa.ac.il
